2011-01-16	Stephan Linz <linz@li-pro.net>

	* xlbsp: use kernel boot parameter mtdparts for MTD physical map

2011-01-12	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-SP3ADSP1800-MMU-lite-12.4
