@@ -247,8 +247,8 @@ define_int CONFIG_XILINX_INTC_0_SPLB_NUM_MASTERS 2
 define_int CONFIG_XILINX_INTC_0_SPLB_MID_WIDTH 1
 define_int CONFIG_XILINX_INTC_0_SPLB_NATIVE_DWIDTH 32
 define_int CONFIG_XILINX_INTC_0_SPLB_SUPPORT_BURSTS 0
-define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 3
-define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111111111111
+define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 4
+define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111111110111
 define_string CONFIG_XILINX_INTC_0_KIND_OF_EDGE 0b11111111111111111111111111111111
 define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111111111
 define_int CONFIG_XILINX_INTC_0_HAS_IPR 1
@@ -259,6 +259,7 @@ define_int CONFIG_XILINX_INTC_0_IRQ_IS_LEVEL 1
 define_int CONFIG_XILINX_INTC_0_IRQ_ACTIVE 1
 define_string CONFIG_XILINX_INTC_0_HW_VER 2.01.a
 define_string CONFIG_XILINX_INTC_0_INSTANCE xps_intc_0
+# mbref_reg_0_IP2INTC_Irpt
 # xps_uart_0_Interrupt
 # xps_ether_0_IP2INTC_Irpt
 # xps_timer_0_Interrupt
