@@ -190,6 +190,14 @@
 				linux,default-trigger = "heartbeat";
 			} ;
 		} ;
+		mbref_reg_0: uio@80800000 {
+			compatible = "xlnx,plbv46-mbref-reg-1.00.a", "generic-uio";
+			interrupt-parent = <&xps_intc_0>;
+			interrupts = < 3 2 >;
+			reg = < 0x80800000 0x10000 >;
+			xlnx,family = "spartan3adsp";
+			xlnx,include-dphase-timer = <0x1>;
+		} ;
 		mdm_0: debug@8fff0000 {
 			compatible = "xlnx,mdm-2.00.a";
 			reg = < 0x8fff0000 0x10000 >;
@@ -376,7 +384,7 @@
 			interrupt-controller ;
 			reg = < 0x8aff0000 0x10000 >;
 			xlnx,kind-of-intr = <0x7>;
-			xlnx,num-intr-inputs = <0x3>;
+			xlnx,num-intr-inputs = <0x4>;
 		} ;
 		xps_timer_0: system-timer@8aef0000 {
 			compatible = "xlnx,xps-timer-1.02.a", "xlnx,xps-timer-1.00.a";
